refactor(app): modernize to Java 25 idiom
Replaces nine index-arithmetic accessors with the SequencedCollection
methods Java 21 added, across six files. The getLast() cases carry the
clarity: lines.get(lines.size() - 1) repeats its receiver and states the
off-by-one inline, where lines.getLast() does not.

Scope is narrow because the tree had little left to modernize. A sweep of
app/ found zero anonymous inner classes, zero colon-form switch statements,
zero nested Math.min/Math.max that Math.clamp would replace, and zero
Arrays.asList -- records, arrow switch, pattern-instanceof, text blocks and
unnamed variables are already the norm here.

Two filters decided the final set. Of 25 .get(0) call sites, 16 are Gson
JsonArray, which implements Iterable but not SequencedCollection, so
getFirst() does not exist on them; rewriting those would not compile. Of the
remaining List sites, only those with a local empty-guard were changed,
because get(0) on an empty list throws IndexOutOfBoundsException while
getFirst() throws NoSuchElementException. Every site here is already behind
isEmpty(), size() == 1, or a literal List.of with three elements, so the
differing exception is unreachable and the rewrite is behaviour-preserving
rather than merely behaviour-compatible.

Two sites were deliberately left alone for failing that test:
TtsModel.defaultFor calls forEngine(engine).get(0) on a list built by
filtering an enum, which is empty if an engine has no models, and
SubagentAcpRunner reaches argv.get(0) through HarnessSandbox.wrap, where
non-emptiness holds by construction but not locally.

Verified: play autotest 429/429, matching the pre-change baseline on the
same worktree.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>